--- a/package.json
+++ b/package.json
@@ -26,5 +26,19 @@
     "mocha": "~1.21.4",
     "should": "~4.0.4",
     "uglify-js": "~2.4.15"
+  },
+  "testling": {
+    "harness": "mocha",
+    "files": "test/*.js",
+    "browsers": [
+      "ie/8..latest",
+      "chrome/22..latest",
+      "firefox/16..latest",
+      "safari/latest",
+      "opera/11.0..latest",
+      "iphone/6",
+      "ipad/6",
+      "android-browser/latest"
+    ]
   }
 }
